--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,14 @@
-@import "./global/global.css";
-@import "./utilidades/tipografia.css";
-@import "./utilidades/cores.css";
-@import "./utilidades/animacao.css";
-
 @import "./global/header.css";
 @import "./global/footer.css";
 
 /* Utilidades */
 @import "./utilidades/componentes.css";
 @import "./utilidades/formulario.css";
+@import "./global/global.css";
+@import "./utilidades/tipografia.css";
+@import "./utilidades/cores.css";
+@import "./utilidades/animacao.css";
+@import "./utilidades/menu-mobile.css";
 
 /* Home */
 @import "./home/introducao.css";
